--- a/.classpath
+++ b/.classpath
@@ -8,13 +8,8 @@
 			<attribute name="owner.project.facets" value="jst.web"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.6.0_21">
-		<attributes>
-			<attribute name="owner.project.facets" value="java"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="G:/MegaSync/download/jar/json-lib-2.4-jdk15.jar"/>
-	<classpathentry kind="lib" path="G:/MegaSync/download/jar/json-20140107.jar"/>
-	<classpathentry kind="lib" path="G:/MegaSync/download/jar/json-lib.jar.zip"/>
+	<classpathentry kind="lib" path="D:/MEGAsync/download/jar/json-20140107.jar"/>
+	<classpathentry kind="lib" path="D:/MEGAsync/download/jar/json-lib-2.4-jdk15.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
